Convert to web component

--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <title>Gears Demo</title>
 </head>
 
 <body>
-<div id="demo"></div>
-<script src="built/demo.js"></script>
+  <h1>My App</h1>
+
+  <p>
+    I am the main content and I am currently overlayed with the Busy Gears so I'm faded out a
+    little.
+  </p>
+  <p>
+    The Busy gears are vertically and horizontally centered on the page.
+  </p>
+  <busy-gears></busy-gears>
+  <script type="module" src="BusyGears.js"></script>
 </body>
 
 </html>
